Added the notification and message icons

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   
+  <!-- ngx-Bootstrap 4 -->
+  <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
+
